# book_scraper

./: Cargo.toml
src/: main.rs
src/functions/: GUI.rs  mod.rs  select_position.rs  setfont.rs  soRt.rs  update.rs
